features gui update

--- a/templates/features.html
+++ b/templates/features.html
@@ -5,12 +5,15 @@
     <div>
         <h3>WHAT</h3>
         <p class="lead">
-                CV_Cleaner is designed for anyone who works in the field of Computer Vision. If you professionally deal with Data Science, ML Engineering or are a student - you will definitely need this tool and you will love it.
+                CV_Cleaner removes unneeded images from your dataset, which can later be used to train machine learning algorithms. 
 
+                If your dataset consists of 2 or more separable classes of images, you can cluster them and then download into separable folders 
+                using our tool (e.g. by receiving a dataset from the Vienna Zoo we want to perform segmentation that will divide the set into animals and their food, and runs).
+                Our solution is fast, precise and robust in image clustering. 
             </p><br></br>
         <h3>FOR WHOM</h3> 
         <p class="lead">
-                CV_Cleaner is designed for anyone who works in the field of Computer Vision. If you professionally deal with Data Science, ML Engineering or are a student - you will definitely need this tool and you will love it.
+                This tool is designed for anyone who works in the field of Computer Vision. If you professionally deal with Data Science, ML Engineering or are a student - you will definitely need this tool and you will love it.
         <br></br>
                 <p class="lead">
         <a href="/features_more" class="btn btn-lg btn-secondary">Learn more about our algorithms</a>
