--- a/templates/features_more.html
+++ b/templates/features_more.html
@@ -9,13 +9,13 @@
         </p><br></br>
         <h3>PIPELINE</h3>
         <div class="list-group">
-                <a href="#" class="list-group-item list-group-item-action">1. Loading and preprocessing dataset (resizing, dimension expanding, subtracting the mean RGB channels of the ImageNet dataset and etc.)
+                <a href="#" class="list-group-item list-group-item-secondary">1. Loading and preprocessing dataset (resizing, dimension expanding, subtracting the mean RGB channels of the ImageNet dataset and etc.)
                     </a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-info">2. Loading and applying pre-trained Inception ResNet V2 on data from 1 point to obtain features for each image.
+                <a href="#" class="list-group-item list-group-item-action list-group-item-warning">2. Loading and applying pre-trained Inception ResNet V2 on data from 1 point to obtain features for each image.
                     </a>
-                <a href="#" class="list-group-item list-group-item-action">3. Applying Birch model on obtained features from 2 point. It is required to specify number of clusters based on user needs (binary classification: number of clusters is equal to 2, k-class classification: number of clusters is equal to k).
+                <a href="#" class="list-group-item list-group-item-secondary">3. Applying Birch model on obtained features from 2 point. It is required to specify number of clusters based on user needs (binary classification: number of clusters is equal to 2, k-class classification: number of clusters is equal to k).
                     </a>
-                <a href="#" class="list-group-item list-group-item-action list-group-item-info">4. Saving outputs to directory with respect to clusters.                    </a>
+                <a href="#" class="list-group-item list-group-item-action list-group-item-warning">4. Saving outputs to directory with respect to clusters.                    </a>
 
               </div>
     </main>
