--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -3,4 +3,6 @@
         <a class="nav-link" href="/features">Features</a>
         <a class="nav-link" href="/features_more">Our algorithms</a>
         <a class="nav-link" href="/contact">Contact</a>
+        <a class="nav-link " href="/sign">Sign up & Sign in</a>
     </nav>
+
