--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,8 +1,16 @@
 <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link " href="/">Home</a>
-        <a class="nav-link" href="/features">Features</a>
-        <a class="nav-link" href="/features_more">Our algorithms</a>
-        <a class="nav-link" href="/contact">Contact</a>
-        <a class="nav-link " href="/sign">Sign up & Sign in</a>
+
+
+        {% if session.logged_in %}
+        <a class="nav-link " href="/panel">Panel</a>
+        <a class="nav-link" href="/logout">Logout</a>
+            {% else %}
+            <a class="nav-link" href="/features">Features</a>
+            <a class="nav-link" href="/features_more">Our algorithms</a>
+            <a class="nav-link" href="/contact">Contact</a>
+        <a class="nav-link " href="/signup">Sign up</a>
+        <a class="nav-link" href="/signin">Sign in</a>
+            {% endif %}
     </nav>
 
