--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,10 +2,9 @@
 
 {% block body %}
 <div class="container">
-    <div class="row">
-      <div class="col-sm">
           <h1>Sign up</h1><br></br>
           {% from "includes/_formhelpers.html" import render_field %}
+          <div class='box'>
           <form method="POST" action="">
             <div class="form-group">
               {{render_field(form.username, class_="form-control")}}
@@ -25,28 +24,10 @@
             <div class="form-group">
               {{render_field(form.confirm, class_="form-control")}}
             </div>
-            <p><input type="submit" class="btn btn-primary" value="Submit to join!"></p>
+            <p><input type="submit" class="btn btn-primary" name='btn' value="Submit to join!"></p></div>
           </form>
       </div>
-      <div class="col-sm">
-          <h1>Sign in</h1>
-  <br></br>
-  <form action="" method="POST">
-    <div class="form-group">
-      <label>E-mail</label>
-      <input type="text" name="email" class="form-control" value={{request.form.email}}>
-    </div>
-    <div class="form-group">
-      <label>Password</label>
-      <input type="password" name="password" class="form-control" value={{request.form.password}}>
-    </div>
-    <button type="submit" class="btn btn-primary">Login</button>
-  </form>
-      </div>
-    </div>
-  </div>
-
+{% endblock %}
 
 
   
-{% endblock %}
