--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -1,9 +1,9 @@
 <nav class="nav nav-masthead justify-content-center">
         <a class="nav-link " href="/">Home</a>
-
-
         {% if session.logged_in %}
-        <a class="nav-link " href="/panel">Panel</a>
+        <a class="nav-link " href="/creator">Creator</a>
+        <a class="nav-link" href = "/release">Release</a>
+        <a class="nav-link" href = "/profile">Profile</a>
         <a class="nav-link" href="/logout">Logout</a>
             {% else %}
             <a class="nav-link" href="/features">Features</a>
