--- a/templates/creator.html
+++ b/templates/creator.html
@@ -19,34 +19,7 @@
     <div class="form-group">
       {{ render_field(form.comments, class_="form-control", id="editor") }}
     </div>
-    <p><input class="btn btn-primary" type="submit" value="Submit settings">
-  </form><br></br>
-  <h4>
-      Upload images:
-  </h4>
-  <form id="upload-form" action="{{ url_for('creator') }}" method="POST" enctype="multipart/form-data">
-    <input class="btn btn-warning" id="file-picker" type="file" name="file" accept="image/input*" multiple>
-    <input class="btn btn-danger" type="submit" value="Upload!" id="upload-button">
-</form><br></br><br></br>
+    <p><input class="btn btn-primary" type="submit" value="Submit settings"></p><br></br><br></br>
 </body>
-<!-- <script>
-    $("#file-picker").change(function(){
-        var input = document.getElementById('file-picker');
-        for (var i=0; i<input.files.length; i++)
-        {
-            var ext= input.files[i].name.substring(input.files[i].name.lastIndexOf('.')+1).toLowerCase()
-            if ((ext == 'png'))
-            {
-                $("#msg").text("Files are supported")
-            }
-            else
-            {
-                $("#msg").text("Files are NOT supported")
-                document.getElementById("file-picker").value ="";
-            }
-        }
-    } );
-</script> -->
-
 
 {% endblock %}
