--- a/templates/case.html
+++ b/templates/case.html
@@ -50,6 +50,23 @@
   <br></br>
   <img src="{{ url_for('download_file', filename=case[0].plot1_name) }} ", height="75%"><br></br>
   <br></br>
-
-
+<h3>Additional informations - number of images per cluster</h3>
+<table class="table table-dark">
+    <tr>
+        <th>Cluster ID</th>
+        <th>Number of images per cluster</th>
+    </tr>
+<tr>
+    <tr>
+        {% for xd in case %}
+        <td>{{xd.clusters}}</td>
+        <td>{{xd.number_of_images}}</td>
+    </tr>
+    {% endfor %}
+</tr>
+</table>
+  <br></br>
+  <p class="lead">
+<a href="#" class="btn btn-lg btn-success">Download clustered images using zip!</a>
+</p><br></br>
 {% endblock %}
