--- a/templates/case.html
+++ b/templates/case.html
@@ -44,11 +44,11 @@
   </table>
   <br></br>
   <h4>Visualizations of clustering</h4>
-  <img src="{{ url_for('download_file', filename=case[0].plot2_name) }} ", height="75%"><br></br>
+  <img src="{{ url_for('display_img', filename=case[0].plot2_name) }} ", height="75%"><br></br>
   <br></br>
-  <img src="{{ url_for('download_file', filename=case[0].plot3_name) }} ", height="75%"><br></br>
+  <img src="{{ url_for('display_img', filename=case[0].plot3_name) }} ", height="75%"><br></br>
   <br></br>
-  <img src="{{ url_for('download_file', filename=case[0].plot1_name) }} ", height="75%"><br></br>
+  <img src="{{ url_for('display_img', filename=case[0].plot1_name) }} ", height="75%"><br></br>
   <br></br>
 <h3>Additional informations - number of images per cluster</h3>
 <table class="table table-dark">
