--- a/templates/case.html
+++ b/templates/case.html
@@ -67,6 +67,7 @@
 </table>
   <br></br>
   <p class="lead">
-<a href="#" class="btn btn-lg btn-success">Download clustered images using zip!</a>
+
+<a href="{{ url_for('download_files', filename=case[0].project_id_hash) }} " class="btn btn-lg btn-success">Download clustered images using zip!</a>
 </p><br></br>
 {% endblock %}
